test/src/e2e_vm_tests/test_programs/should_fail/generic_and_associated_type/src/main.sw
library;

trait TypeTrait {
    type T;

    fn method() -> Self::T;
} {
    fn method2<T>() -> T {
        Self::method()
    }
}
